regressions/valid/issue9.wacc
begin

skip;

char[] b = ['c', 'h', 'a', 'r', '[', ']'];
string a = b;
println a;

skip
end
