regressions/invalid/semanticErr/issue6.wacc
begin 
    bool bad(char[][] m, char e) is
        return m[0]==e
    end

    skip
end
